# brunsli

./: .gitmodules  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Hewlett_Bogota_PartialRelease_361-scaled.jpg.j  LICENSE  MODULE.bazel  Makefile  README  README.md  WIEGO_ACCRA_8008_FULLY_RELEASED-scaled.p.jpg.j  WORKSPACE  WORKSPACE.bazel  _config.yml  appveyor.yml  brunsli.cmake  brunslicodec-wasm.js  brunslicodec-wasm.js.br  brunslicodec-wasm.wasm  brunslicodec-wasm.wasm.br  brunslidec-wasm.js  brunslidec-wasm.js.br  brunslidec-wasm.wasm  brunslidec-wasm.wasm.br  compiler_config_setting.bzl  explainer.md  favicon.ico.br  index.html  index.html.br  security-privacy-questionnaire.md  split.html  split.html.br  sw.js  sw.js.br  test.html
.github/: dependabot.yml
.github/workflows/: ci-wasm.yml  ci.yml  cifuzz.yml  pull_request.yml
c/common/: README  ans_params.cc  ans_params.h  constants.cc  constants.h  context.cc  context.h  distributions.h  histogram.h  huffman_tree.cc  huffman_tree.h  jpeg_data.h  lehmer_code.cc  lehmer_code.h  platform.cc  platform.h  port.h  predict.cc  predict.h  quant_matrix.cc  quant_matrix.h  status.h  types.h
c/dec/: README  ans_decode.cc  ans_decode.h  arith_decode.h  bit_reader.cc  bit_reader.h  brunsli_aux_data.h  brunsli_decode.cc  brunsli_decode.h  brunsli_input.h  context_map_decode.cc  context_map_decode.h  decode.cc  histogram_decode.cc  histogram_decode.h  huffman_decode.cc  huffman_decode.h  huffman_table.cc  huffman_table.h  jpeg_bit_writer.h  jpeg_data_writer.cc  jpeg_data_writer.h  output_chunk.h  serialization_state.h  state.cc  state.h  state_internal.h
c/enc/: README  ans_encode.cc  ans_encode.h  brunsli_encode.cc  brunsli_encode.h  cluster.h  context_map_encode.cc  context_map_encode.h  encode.cc  fast_log.h  histogram_encode.cc  histogram_encode.h  huffman_encode.cc  huffman_encode.h  huffman_tree.cc  huffman_tree.h  jpeg_data_reader.cc  jpeg_data_reader.h  jpeg_huffman_decode.cc  jpeg_huffman_decode.h  state.h  write_bits.cc  write_bits.h
c/experimental/: groups.cc  groups.h
c/include/brunsli/: brunsli_decode.h  brunsli_encode.h  decode.h  encode.h  jpeg_data.h  jpeg_data_reader.h  jpeg_data_writer.h  types.h
c/tests/: bit_reader_test.cc  build_huffman_table_test.cc  c_api_test.cc  context_test.cc  dct_block_test.cc  distributions_test.cc  fallback_test.cc  fuzz_decode.cc  fuzz_decode_streaming.cc  fuzz_encode.cc  headerless_test.cc  huffman_tree_test.cc  lehmer_code_test.cc  quant_matrix_test.cc  stream_decode_test.cc  test_utils.cc  test_utils.h
c/tools/: cbrunsli.cc  dbrunsli.cc
contrib/mod_brunsli/: README.md  mod_brunsli.c
contrib/ngx_brunsli/: README.md  config
contrib/ngx_brunsli/src/: ngx_http_brunsli_static_module.c
contrib/py/jxl_library_patches/: README.txt  __init__.py  jxl_imageio.py  jxl_pillow.py  jxl_pythonmagick.py  jxl_utils.py
docs/: Hewlett_Bogota_PartialRelease_361-scaled.p.jpg.j  Hewlett_Thailand_FullRelease_228-scaled.jpg.j  Hewlett_Thailand_FullRelease_228-scaled.p.jpg.j  WIEGO_ACCRA_8008_FULLY_RELEASED-scaled.jpg.j  album.html  album.html.br  brunslicodec-wasm.js  brunslicodec-wasm.js.br  brunslicodec-wasm.wasm  brunslicodec-wasm.wasm.br  brunslidec-wasm.js  brunslidec-wasm.js.br  brunslidec-wasm.wasm  brunslidec-wasm.wasm.br  hewlett_India_fullrelease112-scaled.jpg.j  hewlett_India_fullrelease112-scaled.p.jpg.j  index.html  index.html.br  split.html  split.html.br  sw.js  sw.js.br  test.html  test.html.br  test.jpg.j
java/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  jni.ldscript
java/dev/brunsli/wrapper/: BUILD  BUILD.bazel  Codec.java  CodecJNI.java  CodecTest.java  codec_jni.cc  codec_jni.h  codec_jni_onload.cc
java/org/brunsli/wrapper/: BUILD  Codec.java  CodecJNI.java  CodecTest.java  codec_jni.cc  codec_jni.h  codec_jni_onload.cc
scripts/: README  compress.sh  lint.sh  pre-push  typos.toml
wasm/: codec.cc
