load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_java//java:java_library.bzl", "java_library")

package(
    default_visibility = ["//visibility:public"],
)

genrule(
    name = "license_resource",
    srcs = ["@dev_brunsli//:LICENSE"],
    outs = ["META-INF/LICENSE"],
    cmd = "cp -f $< $@",
)

java_library(
    name = "license",
    resources = [":license_resource"],
)

########################################################
# WARNING: do not (transitively) depend on this target!
########################################################
cc_binary(
    name = "brunsli_jni.dll",
    srcs = [
        "//dev/brunsli/wrapper:jni_src",
    ],
    linkopts = [
        "-Wl,--version-script,$(location :jni.ldscript)",
    ],
    linkshared = 1,
    deps = [
        ":jni.ldscript",
        "@bazel_tools//tools/jdk:jni",
        "@dev_brunsli//:brunsli_inc",
        "@dev_brunsli//:brunslidec",
        "@dev_brunsli//:brunslienc",
    ],
)
